--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
       box-shadow: 0 0 10px rgba(255, 255, 255, 0.3);
       background-size: cover;
       background-position: center;
-      background-image: url('./pfp.jpg');
+      background-image: url('./b09d4c21b8734256311fb552f0312fb6.webp');
       position: relative;
       z-index: 1;
     }
